@@ -2,7 +2,7 @@
 	\file "Object/def/built_in_datatype_def.h"
 	Definition-related HAC object classes.  
 	This file came from "Object/art_object_definition_data.h".
-	$Id: built_in_datatype_def.h,v 1.8.8.2.6.1 2006/09/28 22:37:20 fang Exp $
+	$Id: built_in_datatype_def.h,v 1.8.8.2.6.2 2006/09/28 23:35:41 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEF_BUILT_IN_DATATYPE_DEF_H__
@@ -67,11 +67,6 @@ public:
 	MAKE_CANONICAL_DATA_TYPE_REFERENCE_PROTO;
 
 	MAKE_CANONICAL_DATA_TYPE_PROTO;
-
-#if DEFINITION_FOOTPRINTS
-	good_bool
-	must_be_valid_template_actuals(const template_actuals&) const;
-#endif
 
 	never_ptr<const value_placeholder_type>
 	add_template_formal(excl_ptr<value_placeholder_type>& f);
