@@ -2,7 +2,7 @@
 	\file "Object/def/enum_datatype_def.h"
 	Definition-related HAC object classes.  
 	This file came from "Object/art_object_definition_data.h".
-	$Id: enum_datatype_def.h,v 1.8.16.1 2006/09/28 22:37:26 fang Exp $
+	$Id: enum_datatype_def.h,v 1.8.16.2 2006/09/28 23:35:47 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEF_ENUM_DATATYPE_DEF_H__
@@ -90,11 +90,6 @@ public:
 	MAKE_CANONICAL_DATA_TYPE_REFERENCE_PROTO;
 
 	MAKE_CANONICAL_DATA_TYPE_PROTO;
-
-#if DEFINITION_FOOTPRINTS
-	good_bool
-	must_be_valid_template_actuals(const template_actuals&) const;
-#endif
 
 	good_bool
 	require_signature_match(const never_ptr<const definition_base> d) const;
