@@ -1,6 +1,6 @@
 /**
 	\file "Object/inst/instance_placeholder.tcc"
-	$Id: instance_placeholder.tcc,v 1.1.2.7 2006/09/11 22:31:05 fang Exp $
+	$Id: instance_placeholder.tcc,v 1.1.2.7.4.1 2006/09/28 23:35:52 fang Exp $
 	TODO: trim includes
  */
 
@@ -298,7 +298,9 @@ INSTANCE_PLACEHOLDER_TEMPLATE_SIGNATURE
 ostream&
 INSTANCE_PLACEHOLDER_CLASS::dump_formal(ostream& o) const {
 //	this->dump_base(o);
+	this->get_unresolved_type_ref()->dump(o) << ' ' << key;
 #if 0
+	// placeholders don't have collections
 	this->dump_collection_only(o);
 #endif
 	expr_dump_context dc(expr_dump_context::default_value);
